--- a/MentalWellness/app/src/main/res/layout/fragment_score_recommendation.xml
+++ b/MentalWellness/app/src/main/res/layout/fragment_score_recommendation.xml
@@ -48,6 +48,17 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
+    <!-- Loading Progress Indicator -->
+    <ProgressBar
+        android:id="@+id/progress_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <!-- Score Card -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_score"
@@ -315,6 +326,22 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/card_tips" />
 
+                <!-- Refresh Result Button -->
+                <Button
+                    android:id="@+id/btn_refresh_result"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/gradient_button_background"
+                    android:paddingVertical="12dp"
+                    android:text="Refresh Result"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/btn_do_stress_again" />
+
                 <!-- Saved Notice -->
                 <TextView
                     android:id="@+id/tv_saved_notice"
@@ -329,7 +356,7 @@
                     android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/btn_do_stress_again" />
+                    app:layout_constraintTop_toBottomOf="@id/btn_refresh_result" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
