--- a/MentalWellness/app/src/main/res/layout/activity_splash.xml
+++ b/MentalWellness/app/src/main/res/layout/activity_splash.xml
@@ -7,22 +7,27 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/splashAnimation"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="466dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="-3dp"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/splash_animation" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="84dp"
         android:layout_below="@id/splashAnimation"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="21dp"
         android:text="Mental Wellness"
         android:textColor="#3c415e"
-        android:textSize="24sp"
+        android:textSize="34sp"
         android:textStyle="bold" />
 
 </RelativeLayout> 
