--- a/MentalWellness/app/src/main/res/layout/item_therapist.xml
+++ b/MentalWellness/app/src/main/res/layout/item_therapist.xml
@@ -161,19 +161,19 @@
             android:layout_marginStart="8dp"
             android:text="Next available: Today, 3:00 PM"
             android:textColor="#9D7E67"
-            android:textSize="14sp"
+            android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/img_calendar"
             app:layout_constraintStart_toEndOf="@+id/img_calendar"
             app:layout_constraintTop_toTopOf="@+id/img_calendar" />
 
         <Button
             android:id="@+id/btn_view_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="36dp"
+            android:layout_width="101dp"
+            android:layout_height="38dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/bg_button_active"
             android:paddingHorizontal="16dp"
-            android:text="View Profile"
+            android:text="View"
             android:textAllCaps="false"
             android:textColor="#9D7E67"
             android:textSize="14sp"
