--- a/MentalWellness/app/src/main/res/drawable/blue_gradient_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/blue_gradient_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#FFF8E1"
-        android:centerColor="#FFECB3"
-        android:endColor="#FFE082"
+        android:startColor="#E3F2FD"
+        android:centerColor="#BBDEFB"
+        android:endColor="#90CAF9"
         android:angle="135"
         android:type="linear" />
 </shape> 
