--- a/MentalWellness/app/src/main/res/drawable/purple_gradient_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/purple_gradient_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#FFF8E1"
-        android:centerColor="#FFECB3"
-        android:endColor="#FFE082"
+        android:startColor="#F3E5F5"
+        android:centerColor="#E1BEE7"
+        android:endColor="#CE93D8"
         android:angle="135"
         android:type="linear" />
 </shape> 
