--- a/MentalWellness/app/src/main/res/drawable/gradient_blue_dark_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/gradient_blue_dark_background.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="#FFA726"
-        android:startColor="#FFCC80"
+        android:endColor="#3F51B5"
+        android:startColor="#7986CB"
         android:type="linear" />
     <corners android:radius="16dp" />
 </shape> 
