--- a/MentalWellness/app/src/main/res/drawable/gradient_green_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/gradient_green_background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
-        android:startColor="#27AE60"
-        android:endColor="#2ECC71"
-        android:angle="135" />
+        android:angle="135"
+        android:endColor="#4CAF50"
+        android:startColor="#81C784"
+        android:type="linear" />
+    <corners android:radius="16dp" />
 </shape> 
