--- a/MentalWellness/app/src/main/res/drawable/gradient_purple_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/gradient_purple_background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
-        android:startColor="#8E44AD"
-        android:endColor="#9B59B6"
-        android:angle="135" />
+        android:angle="135"
+        android:endColor="#9079E8"
+        android:startColor="#C5B6FF"
+        android:type="linear" />
+    <corners android:radius="16dp" />
 </shape> 
