--- a/MentalWellness/app/src/main/res/drawable/gradient_red_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/gradient_red_background.xml
@@ -3,8 +3,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="#FFA726"
-        android:startColor="#FFCC80"
+        android:endColor="#E53935"
+        android:startColor="#EF9A9A"
         android:type="linear" />
     <corners android:radius="16dp" />
 </shape> 
