--- a/MentalWellness/app/src/main/res/drawable/gradient_teal_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/gradient_teal_background.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
-        android:startColor="#16A085"
-        android:endColor="#1ABC9C"
-        android:angle="135" />
+        android:angle="135"
+        android:endColor="#009688"
+        android:startColor="#80CBC4"
+        android:type="linear" />
+    <corners android:radius="16dp" />
 </shape> 
