--- a/MentalWellness/app/src/main/res/values/colors.xml
+++ b/MentalWellness/app/src/main/res/values/colors.xml
@@ -8,6 +8,12 @@
     <color name="colorBlue">#4A90E2</color>
     <color name="colorMint">#5CD6B1</color>
     <color name="colorPink">#FF7A9E</color>
+    <color name="colorYellow">#FFAC6D</color>
+    <color name="colorPurple">#9079E8</color>
+    <color name="colorBlueDark">#3F51B5</color>
+    <color name="colorGreen">#4CAF50</color>
+    <color name="colorRed">#E53935</color>
+    <color name="colorTeal">#009688</color>
     <color name="peach">#E8B79F</color>
     
     <!-- Peach color variants for wellness screens -->
