--- a/MentalWellness/app/src/main/res/values/styles.xml
+++ b/MentalWellness/app/src/main/res/values/styles.xml
@@ -42,5 +42,16 @@
         <item name="cornerSize">50%</item>
     </style>
     
-
+    <!-- Full Screen Dialog Style -->
+    <style name="FullScreenDialogStyle" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowEnterAnimation">@android:anim/fade_in</item>
+        <item name="android:windowExitAnimation">@android:anim/fade_out</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
 </resources> 
