--- a/MentalWellness/app/src/main/res/drawable/ic_next.xml
+++ b/MentalWellness/app/src/main/res/drawable/ic_next.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#000000"
-        android:pathData="M8,5v14l11,-7z"/>
-</vector>
+        android:pathData="M16,6h2v12h-2zM6,6l8.5,6l-8.5,6z"/>
+</vector> 
