--- a/MentalWellness/app/src/main/res/layout/fragment_favorites.xml
+++ b/MentalWellness/app/src/main/res/layout/fragment_favorites.xml
@@ -39,8 +39,14 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:clipToPadding="false"
         android:paddingBottom="16dp"
+        android:paddingTop="8dp"
+        android:scrollbars="vertical"
+        android:visibility="visible"
+        android:background="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
