--- a/MentalWellness/app/src/main/res/layout/item_user_playlist.xml
+++ b/MentalWellness/app/src/main/res/layout/item_user_playlist.xml
@@ -3,12 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardUserPlaylist"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
+    android:layout_height="120dp"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="16dp"
     app:cardCornerRadius="16dp"
-    app:cardElevation="4dp"
-    app:layout_constraintDimensionRatio="H,2:1">
+    app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/playlistBackground"
