--- a/MentalWellness/app/src/main/res/drawable/bg_button_inactive.xml
+++ b/MentalWellness/app/src/main/res/drawable/bg_button_inactive.xml
@@ -3,7 +3,7 @@
     <solid android:color="#FFFFFF" /> <!-- White background -->
     <stroke
         android:width="1dp"
-        android:color="#E8B79F" /> <!-- Peach/orange border -->
+        android:color="#E4A478" /> <!-- Peach/orange border -->
     <corners android:radius="50dp" />
     <padding
         android:bottom="10dp"
