--- a/MentalWellness/app/src/main/res/drawable/bg_status_tag.xml
+++ b/MentalWellness/app/src/main/res/drawable/bg_status_tag.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="16dp" />
-    <solid android:color="#E6F7EC" />
+    <solid android:color="#FBE9E1" />
 </shape> 
