--- a/MentalWellness/app/src/main/res/drawable/bg_tab_inactive.xml
+++ b/MentalWellness/app/src/main/res/drawable/bg_tab_inactive.xml
@@ -4,7 +4,7 @@
     <corners android:radius="50dp" />
     <stroke
         android:width="1dp"
-        android:color="#E8B79F" />
+        android:color="#E4A478" />
     <padding
         android:bottom="8dp"
         android:left="16dp"
