--- a/MentalWellness/app/src/main/res/drawable/option_excellent_background.xml
+++ b/MentalWellness/app/src/main/res/drawable/option_excellent_background.xml
@@ -2,16 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape android:shape="rectangle">
-            <solid android:color="#E8F5E9" />
+            <solid android:color="#FBE9E1" />
             <corners android:radius="8dp" />
-            <stroke android:width="1dp" android:color="#4CAF50" />
+            <stroke android:width="1dp" android:color="#E4A478" />
         </shape>
     </item>
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="#E8F5E9" />
+            <solid android:color="#FBE9E1" />
             <corners android:radius="8dp" />
-            <stroke android:width="1dp" android:color="#4CAF50" />
+            <stroke android:width="1dp" android:color="#E4A478" />
         </shape>
     </item>
     <item>
