--- a/MentalWellness/app/src/main/res/values/colors.xml
+++ b/MentalWellness/app/src/main/res/values/colors.xml
@@ -11,10 +11,10 @@
     <color name="colorYellow">#FFAC6D</color>
     <color name="colorPurple">#9079E8</color>
     <color name="colorBlueDark">#3F51B5</color>
-    <color name="colorGreen">#4CAF50</color>
+    <color name="colorGreen">#E4A478</color>
     <color name="colorRed">#E53935</color>
     <color name="colorTeal">#009688</color>
-    <color name="peach">#E8B79F</color>
+    <color name="peach">#E4A478</color>
     
     <!-- Peach color variants for wellness screens -->
     <color name="light_peach">#FFE6DD</color>
@@ -38,7 +38,7 @@
     <color name="text_secondary">#90a4ae</color>
 
     <color name="gray">#888888</color>
-    <color name="green">#4CAF50</color>
+    <color name="green">#E4A478</color>
     <color name="blue">#2196F3</color>
     <color name="red">#F44336</color>
 
