--- a/MentalWellness/app/src/main/res/xml/network_security_config.xml
+++ b/MentalWellness/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">mentalwellness-backend-m8dk.onrender.com</domain>
+        <domain includeSubdomains="true">images.unsplash.com</domain>
     </domain-config>
 </network-security-config> 
