--- a/MentalWellness/app/src/main/res/layout/fragment_home.xml
+++ b/MentalWellness/app/src/main/res/layout/fragment_home.xml
@@ -42,6 +42,7 @@
                 android:gravity="center">
                 
                 <TextView
+                    android:id="@+id/tv_greeting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Good morning, Adamya"
@@ -51,6 +52,7 @@
                     android:fontFamily="sans-serif-medium" />
                     
                 <TextView
+                    android:id="@+id/tv_sub_greeting"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Time to find your inner peace"
