--- a/MentalWellness/app/src/main/res/drawable/ic_next.xml
+++ b/MentalWellness/app/src/main/res/drawable/ic_next.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#000000"
-        android:pathData="M16,6h2v12h-2zM6,6l8.5,6l-8.5,6z"/>
+        android:pathData="M6,18l8.5,-6L6,6v12zM16,6v12h2V6h-2z"/>
 </vector> 
