--- a/MentalWellness/app/src/main/res/layout/activity_profile.xml
+++ b/MentalWellness/app/src/main/res/layout/activity_profile.xml
@@ -49,6 +49,22 @@
                         app:layout_constraintTop_toTopOf="parent"
                         app:tint="#3498db" />
 
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/logoutButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="108dp"
+                        android:layout_marginEnd="236dp"
+                        android:backgroundTint="#FFFFFF"
+                        android:paddingHorizontal="12dp"
+                        android:paddingVertical="4dp"
+                        android:text="Logout"
+                        android:textColor="#E74C3C"
+                        android:textSize="14sp"
+                        app:cornerRadius="16dp"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <TextView
                         android:id="@+id/nameText"
                         android:layout_width="0dp"
